--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -624,6 +624,7 @@ input[type="search"] {
 }
 
 .pencil-icon {
+    display: none;
     position: absolute;
     bottom: 30px;
     right: 743px;
@@ -635,9 +636,13 @@ input[type="search"] {
     font-size: 20px;
     transition: transform 0.3s ease;
 }
-
+.profile-picture-wrapper:hover .pencil-icon {
+  display: block;  /* Display the pencil icon */
+  transform: scale(1.2);  /* Slight zoom effect on hover */
+}
 /* Hover effect for pencil icon */
 .pencil-icon:hover {
+    display: block;
   transform: scale(1.2);  /* Slight zoom effect on hover */
 }
 
@@ -668,7 +673,7 @@ input[type="search"] {
 
 .profile-picture-wrapper {
     position: relative;
-    display: inline-block;
+  display: inline-block;
 }
 
 
