--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -84,7 +84,7 @@ body {
     transition: all 0.3s;
     border-left: 3px solid transparent;
     font-family: 'Inter', sans-serif;  /* Inter font applied */
-    font-size: 14px;
+    font-size: 17px;
 }
 
 .sidebar ul li a:hover {
@@ -704,13 +704,7 @@ input[type="search"] {
   transform: scale(1.2);  /* Slight zoom effect on hover */
 }
 /* Style the profile image */
-.profile-picture {
-  width: 120px;
-  height: 120px;
-  object-fit: cover;
-  border: 3px solid #fff;
-  transition: transform 0.3s ease;
-}
+
 
 /* .profile-picture-wrapper:hover .profile-picture {
   transform: scale(1.1);  Slight zoom effect on hover
@@ -735,9 +729,10 @@ input[type="search"] {
 
 .profile-picture {
     width: 150px;
-    height: 150px;
+    height: 102px;
     object-fit: cover;
-    border: 5px solid #f1f1f1;
+    border: none;
+  transition: transform 0.3s ease;
 }
 
 
@@ -836,12 +831,6 @@ h5 {
     height: 105px;
 }
 
-.profile-picture {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border: 5px solid #f1f1f1;
-}
 
 
 /* Form Styling */
@@ -1026,3 +1015,49 @@ button {
         left: 50%;
         transform: translateX(-50%);
     }
+
+
+    /* sidebar anouncement dropdown */
+
+.dropdown-menu.no-radius {
+    background-color: transparent !important;
+    border: none !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
+    text-align: center;
+}
+
+/* Hide + icon when sidebar is collapsed */
+.sidebar.collapsed .plus-icon {
+    display: none !important;
+}
+
+.custom-dropdown-below {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin-top: 0;
+    padding-top: 0;
+    z-index: 999;
+}
+
+/* Style View Announcements link */
+.view-announcements-link {
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+/* Style Manage Announcements link */
+.manage-announcements-link {
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+/* Hover effect */
+.view-announcements-link:hover,
+.manage-announcements-link:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
